--- a/Esporte/Basquete/index.html
+++ b/Esporte/Basquete/index.html
@@ -10,10 +10,10 @@
     <h1>Mundo Esportes - Basquete</h1>
 
     <ul>
-        <li><a href="../index.html">Início</a></li>
-        <li><a href="../futebol/index.html">Futebol</a></li>
-        <li><a href="index.html">Basquete</a></li>
-        <li><a href="../volei/index.html">Vôlei</a></li>
+        <li><a href="/index.html">Início</a></li>
+        <li><a href="/Esporte/Futebol/index.html">Futebol</a></li>
+        <li><a href="/Esporte/Basquete/index.html">Basquete</a></li>
+        <li><a href="/Esporte/Voleibol/index.html">Vôlei</a></li>
     </ul>
 
     <h2>Sobre o Basquete</h2>
