--- a/Esporte/Voleibol/index.html
+++ b/Esporte/Voleibol/index.html
@@ -5,16 +5,17 @@
     <title>Vôlei - Mundo Esportes</title>
 </head>
 <body>
-    <img src="../imgs/logo.png" alt="Logo da Loja" width="150">
+    <img src="https://urbanarts.vtexassets.com/arquivos/ids/5275402/73_Ampliada.jpg?v=637221359822330000" alt="Logo da Loja" width="150">
 
     <h1>Mundo Esportes - Vôlei</h1>
 
     <ul>
-        <li><a href="../index.html">Início</a></li>
-        <li><a href="../futebol/index.html">Futebol</a></li>
-        <li><a href="../basquete/index.html">Basquete</a></li>
-        <li><a href="index.html">Vôlei</a></li>
+        <li><a href="/index.html">Início</a></li>
+        <li><a href="/Esporte/Futebol/index.html">Futebol</a></li>
+        <li><a href="/Esporte/Basquete/index.html">Basquete</a></li>
+        <li><a href="/Esporte/Voleibol/index.html">Vôlei</a></li>
     </ul>
+
 
     <h2>Sobre o Vôlei</h2>
     <p>O voleibol foi criado em 1895 e é muito popular no Brasil. Grandes atletas como Giba, Sheilla e Jaqueline são referências na modalidade.</p>
