--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <section>
       <h3>Escolha seu esporte:</h3>
       <ul>
-        <li><a href="/Esporte/Futebol/index.html">⚽ Futebol</a></li>
-        <li><a href="/Esporte/Basquete/index.html">🏀 Basquete</a></li>
-        <li><a href="/Esporte/Voleibol/index.html">🏐 Vôlei</a></li>
+        <li><a href="/Esporte/Futebol/index.html"> Futebol</a></li>
+        <li><a href="/Esporte/Basquete/index.html"> Basquete</a></li>
+        <li><a href="/Esporte/Voleibol/index.html"> Vôlei</a></li>
       </ul>
     </section>
   </main>
@@ -34,7 +34,11 @@
   <footer>
     <p>&copy; 2025 Loja de Esportes - Todos os direitos reservados.</p>
   </footer>
-<h1>Proprietário:</h1>
+<h1>Local da Loja</h1>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3832.312117871937!2d-42.291932224862286!3d-16.152846884538842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x74deb6cfeacf0c9%3A0xc54c3e1673e79443!2sBar%20do%20dao%20preto!5e0!3m2!1spt-BR!2sbr!4v1749577709618!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<h1>Aceitamos Todas as formas de Pagamentos!</h1>
+
+ <h1>Proprietário:</h1>
 <p>Jhonatan Diogo Rodrigues Nunes</p>
 </body>
 </html>
